crear las tarjetas de los libros

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 placeholder="Busca un libro"
             />
             <button id="searchButton" onclick="searchBooks()">Buscar </button>
+            <div id="booksGrid" class="books-grid"></div>
         </main>
         <script src="./script.js"></script>
     </body>
