--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Proyecto Biblioteca</title>
         <link href="./styles.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <main>
@@ -14,9 +15,22 @@
                 id="busquedaLibro"
                 placeholder="Busca un libro"
             />
-            <button id="searchButton" onclick="searchBooks()">Buscar </button>
+            <button type="button" id="searchButton">Buscar </button>
+            <div id="cart" class="cart-container">
+                <button id="cart-button" class="cart-button">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span id="cart-count" class="cart-count">0</span>
+                </button>
+            </div>
             <div id="booksGrid" class="books-grid"></div>
+            
         </main>
+        <div id="cartmodal">
+            <div id="cartheader">
+                <ul id="cart-list">                
+                </ul>
+                <button type="button">Comprar</button>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
