--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="cartheader">
                 <ul id="cart-list">                
                 </ul>
-                <button type="button">Comprar</button>
+                <button id="buy" type="button">Comprar</button>
         </div>
         <script src="./script.js"></script>
     </body>
