title: Update index.html, script.js, and styles.css

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
     </main>
     <div id="cartmodal">
         <div id="cartheader">
-            <ul id="cart-list">
+            <h2>Carrito de compras</h2>
+            <div id="cart-message">
+                <p id="cart-empty-message">El carrito está vacío</p>
+            </div>
+            <div id="cart-buy-message">
+                <ul id="cart-list">
             </ul>
             <button id="buy" type="button">Comprar</button>
+            </div>
         </div>
         <script src="./script.js"></script>
 </body>
